Fixed bug on mobile

--- a/client/src/Pages/Settings/Settings.css
+++ b/client/src/Pages/Settings/Settings.css
@@ -14,7 +14,7 @@
 }
 
 .letters-avatar {
-    margin: 0 auto 15px auto;
+    margin: 15px auto;
 }
 
 .Settings>div {
